--- a/public/profile/projects.json
+++ b/public/profile/projects.json
@@ -48,7 +48,7 @@
             ]
         },
         {
-            "image" : "images/projects/java-logo.png",
+            "image" : "images/projects/java.png",
             "title": "Proyecto Grupal",
             "bodyText": "Usando Java y C# como lenguaje se creó un proyecto que reunía 5 minijuegos desarrollados por cada uno de los integrantes",
     
