--- a/public/profile/projects.json
+++ b/public/profile/projects.json
@@ -55,7 +55,8 @@
                 "Mongo DB",
                 "Express",
                 "React",
-                "Node JS"
+                "Node JS",
+                "postman"
             ]
         },
         {
